--- a/templates/login.html
+++ b/templates/login.html
@@ -82,12 +82,7 @@
   <nav>
     <a href="#" class="logo">SoulPet</a>
     <ul>
-        <li><a href="{{ url_for('landing')}}">Home</a></li>
-        <li><a href="{{ url_for('index')}}">Profile</a></li>
-        <li><a href="{{ url_for('add_pets')}}">Add Pet</a></li>
-        <li><a href="{{ url_for('search')}}">Search</a></li>
-        <li><a href="{{ url_for('liked_pets')}}">Liked Pets</a></li>
-        <li><a href="{{ url_for('login')}}">Login</a></li>
+        <li><a href="{{ url_for('landing')}}">Cancel</a></li>
     </ul>
 </nav>
 
