--- a/templates/edit.html
+++ b/templates/edit.html
@@ -84,12 +84,8 @@
     <nav>
         <a href="#" class="logo">SoulPet</a>
         <ul>
-            <li><a href="{{ url_for('landing')}}">Home</a></li>
-            <li><a href="{{ url_for('index')}}">Profile</a></li>
-            <li><a href="{{ url_for('add_pets')}}">Add Pet</a></li>
-            <li><a href="{{ url_for('search')}}">Search</a></li>
-            <li><a href="{{ url_for('liked_pets')}}">Liked Pets</a></li>
-            <li><a href="{{ url_for('login')}}">Logout</a></li>
+            <li><a href="{{ url_for('index')}}">Cancel</a></li>
+            <li><a href="{{ url_for('landing')}}">Sign Out</a></li>
         </ul>
     </nav>
 
