--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,9 +14,9 @@
     <nav>
         <a href="#" class="logo">SoulPet</a>
         <ul>
-            <li><a href="{{ url_for('landing')}}">Home</a></li>
-            <li><a href="{{ url_for('index')}}">Profile</a></li>
+            <li><a href="{{ url_for('add')}}">Sign Up</a></li>
             <li><a href="{{ url_for('login')}}">Login</a></li>
+            <li><a href="{{ url_for('add_shelter')}}">New Shelter</a></li>
         </ul>
     </nav>
 
